--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 kafka.brokers=10.10.14.48:9092
 kafka.group.id=metrics-group-test
 kafka.zookeeper.connect=10.10.14.48:2181
-metrics.topic=zhisheng
+metrics.topic=xxx
 logs.topic=xxx
 kafka.sink.brokers=10.10.14.48:9092
 kafka.sink.topic=xxx
-stream.parallelism=5
+stream.parallelism=1
 stream.checkpoint.interval=1000
 stream.checkpoint.enable=false
-stream.sink.parallelism=5
+stream.sink.parallelism=1
