--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,4 +8,10 @@ kafka.sink.topic=xxx
 stream.parallelism=1
 stream.checkpoint.interval=1000
 stream.checkpoint.enable=false
+elasticsearch.hosts=10.10.14.53:9200
+elasticsearch.bulk.flush.max.actions=1000
 stream.sink.parallelism=1
+
+es.security.enable=false
+es.security.username=admin
+es.security.password=admin
